[package]
name = "flash_find"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
dirs = "6.0.0"
fst = "0.4.7"
iced = { version = "0.12.1", features = ["tokio"] }
image = "0.25.9"
jwalk = "0.8.1"
memmap2 = "0.9.9"
open = "5.3.3"
rayon = "1.11.0"
ureq = "2.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
strip = true 
opt-level = 3
lto = true
codegen-units = 1 
panic = "abort"